--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <img id="kep" src="számnélkül.png" alt="">
     <br>
     
-    <button onclick="document.getElementById('kep').src='számnélkül.png'">Alap</button>
-    <Button onclick="document.getElementById('kep').src='számmal+megoldas.png'">Megoldás</Button>
+    <button onclick="document.getElementById('kep').src='számnélkül.png'" style="margin-left: 75px; height: 100px; width: 200px; font-size: x-large;">Alap</button>
+    <Button onclick="document.getElementById('kep').src='számmal+megoldas.png'" style="margin-left: 5px; height: 100px; width: 200px; font-size: x-large;">Megoldás</Button>
     <br>
   
     
